wasm-pack.log
Sep 29 18:17:00.423 ERRO Compilation of your program failed. stderr:

   Compiling wasm-game-of-life v0.1.0 (file:///home/michele/learning/rust/wasm-game-of-life)
error[E0463]: can't find crate for `itertools`
 --> src/lib.rs:3:14
  |
3 | #[macro_use] extern crate itertools;
  |              ^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error: aborting due to previous error

For more information about this error, try `rustc --explain E0463`.
error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

Sep 30 12:05:03.388 ERRO unexpected character found: `;` at line 16
Oct 03 21:45:27.756 ERRO Compilation of your program failed. stderr:

   Compiling wasm-game-of-life v0.1.0 (file:///home/michele/learning/rust/wasm-game-of-life)
error[E0615]: attempted to take value of method `cell` on type `&Universe`
  --> src/lib.rs:28:14
   |
28 |         self.cell[(row * self.width + column) as usize]
   |              ^^^^
   |
   = help: maybe a `()` to call it is missing?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0615`.
error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

Oct 03 22:05:48.399 ERRO Compilation of your program failed. stderr:

   Compiling wasm-game-of-life v0.1.0 (file:///home/michele/learning/rust/wasm-game-of-life)
error[E0425]: cannot find value `col` in this scope
  --> src/lib.rs:28:45
   |
28 |         let (pos, bit) = self.position(row, col);
   |                                             ^^^ not found in this scope

error[E0425]: cannot find value `col` in this scope
  --> src/lib.rs:41:45
   |
41 |         let (pos, bit) = self.position(row, col);
   |                                             ^^^ not found in this scope

error[E0593]: closure is expected to take a single 2-tuple as argument, but it takes 2 distinct arguments
help: change the closure to accept a tuple instead of individual arguments
  |
1 | |(, )|extern crate cfg_if;
  | ^^^^^^

error[E0277]: a collection of type `std::vec::Vec<u8>` cannot be built from an iterator over elements of type `Cell`
  |
  = help: the trait `std::iter::FromIterator<Cell>` is not implemented for `std::vec::Vec<u8>`

error[E0308]: mismatched types
  |
  = note: expected type `*const Cell`
             found type `*const u8`

error[E0308]: mismatched types
   --> src/lib.rs:150:41
    |
150 |                 let symbol = if cell == Cell::Dead { '◻' } else { '◼' };
    |                                         ^^^^^^^^^^ expected u8, found enum `Cell`
    |
    = note: expected type `u8`
               found type `Cell`

error: aborting due to 6 previous errors

Some errors occurred: E0277, E0308, E0425, E0593.
For more information about an error, try `rustc --explain E0277`.
error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

Oct 04 22:10:31.517 ERRO Compilation of your program failed. stderr:

   Compiling serde_derive v1.0.79
   Compiling wasm-bindgen-shared v0.2.23
   Compiling wasm-bindgen-backend v0.2.23
   Compiling wasm-bindgen-macro-support v0.2.23
   Compiling wasm-bindgen-macro v0.2.23
   Compiling wasm-bindgen v0.2.23
   Compiling js-sys v0.3.0
   Compiling wasm-game-of-life v0.1.0 (file:///home/michele/learning/rust/wasm-game-of-life)
error: cannot find macro `log!` in this scope
  |
  = help: have you added the `#[macro_use]` on the module/import?

error: aborting due to previous error

error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

Oct 04 22:11:04.633 ERRO Compilation of your program failed. stderr:

   Compiling wasm-game-of-life v0.1.0 (file:///home/michele/learning/rust/wasm-game-of-life)
error[E0425]: cannot find value `row` in this scope

error[E0425]: cannot find value `col` in this scope

error[E0425]: cannot find value `live_neighbors` in this scope

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0425`.
error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

Oct 04 22:39:23.900 ERRO Compilation of your program failed. stderr:

   Compiling wasm-game-of-life v0.1.0 (file:///home/michele/learning/rust/wasm-game-of-life)
error[E0433]: failed to resolve. Use of undeclared type or module `Cells`

warning: unused macro definition
  --> src/lib.rs:28:1
   |
28 | / macro_rules! log {
29 | |     ($($t:tt)*) => (log(&format!($($t)*)))
30 | | }
   | |_^
   |
   = note: #[warn(unused_macros)] on by default

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

Oct 04 22:40:06.906 ERRO Compilation of your program failed. stderr:

   Compiling wasm-game-of-life v0.1.0 (file:///home/michele/learning/rust/wasm-game-of-life)
error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
   --> src/lib.rs:150:10
    |
150 |         };
    |          ^ expected one of `)`, `,`, `.`, `?`, or an operator here

error: expected expression, found `)`
   --> src/lib.rs:151:9
    |
151 |         )
    |         ^ expected expression

error[E0433]: failed to resolve. Use of undeclared type or module `Cells`

warning: unused macro definition
  --> src/lib.rs:28:1
   |
28 | / macro_rules! log {
29 | |     ($($t:tt)*) => (log(&format!($($t)*)))
30 | | }
   | |_^
   |
   = note: #[warn(unused_macros)] on by default

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0433`.
error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

Oct 04 22:40:21.446 ERRO Compilation of your program failed. stderr:

   Compiling wasm-game-of-life v0.1.0 (file:///home/michele/learning/rust/wasm-game-of-life)
error[E0433]: failed to resolve. Use of undeclared type or module `Cells`

warning: unused macro definition
  --> src/lib.rs:28:1
   |
28 | / macro_rules! log {
29 | |     ($($t:tt)*) => (log(&format!($($t)*)))
30 | | }
   | |_^
   |
   = note: #[warn(unused_macros)] on by default

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

Oct 04 22:41:25.975 ERRO Compilation of your program failed. stderr:

   Compiling wasm-game-of-life v0.1.0 (file:///home/michele/learning/rust/wasm-game-of-life)
error[E0433]: failed to resolve. Use of undeclared type or module `Cells`

warning: unused macro definition
  --> src/lib.rs:28:1
   |
28 | / macro_rules! log {
29 | |     ($($t:tt)*) => (log(&format!($($t)*)))
30 | | }
   | |_^
   |
   = note: #[warn(unused_macros)] on by default

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
error: Could not compile `wasm-game-of-life`.

To learn more, run the command again with --verbose.

